# Zuma

./: Cargo.toml  README.md
MoproAndroidBindings/uniffi/mopro/: mopro.kt
MoproiOSBindings/: mopro.swift
MoproiOSBindings/MoproBindings.xcframework/ios-arm64_x86_64-simulator/Headers/: moproFFI.h
src/: lib.rs
zuma/: README.md  firebase.json  pubspec.yaml
zuma/android/app/: build.gradle.kts  google-services.json
zuma/android/app/src/main/: AndroidManifest.xml
zuma/ios/Runner/: GoogleService-Info.plist  Info.plist
zuma/ios/Runner.xcodeproj/: project.pbxproj
zuma/lib/: QR_Code.dart  create_event.dart  event_detail.dart  explore.dart  firebase_options.dart  home.dart  main.dart  mongodb_service.dart  navbar.dart  scan.dart  scan_result.dart
zuma/linux/: CMakeLists.txt
zuma/linux/runner/: my_application.cc
zuma/macos/DerivedData/Runner/: info.plist
zuma/macos/Runner.xcodeproj/: project.pbxproj
zuma/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
zuma/macos/Runner/Configs/: AppInfo.xcconfig
zuma/mopro_flutter_plugin/ios/Classes/: MoproFlutterPlugin.swift
zuma/mopro_flutter_plugin/ios/MoproBindings.xcframework/ios-arm64_x86_64-simulator/Headers/: moproFFI.h
zuma/mopro_flutter_plugin/lib/: mopro_flutter.dart  mopro_flutter_method_channel.dart  mopro_flutter_platform_interface.dart  mopro_types.dart
zuma/mopro_flutter_plugin/test/: mopro_flutter_method_channel_test.dart  mopro_flutter_test.dart
zuma/web/: index.html  manifest.json
zuma/windows/: CMakeLists.txt
zuma/windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
