[package]
name = "zuma-circuits"
version = "0.1.0"
edition = "2021"

# We're going to build a static library named mopro_bindings
# This library name should not be changed
[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "mopro_bindings"

# Adapters for different proof systems
[features]
default = []

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = { path = "/Users/zhengyawen/Documents/GitHub/mopro/mopro-ffi" }
uniffi = { version = "=0.29.0" }
num-bigint = "0.4.0"
thiserror = "=2.0.3"
semaphore-rs = { git = "https://github.com/worldcoin/semaphore-rs", features = [
    "depth_16",
] }
serde_json = "1.0"

[build-dependencies]
mopro-ffi = { path = "/Users/zhengyawen/Documents/GitHub/mopro/mopro-ffi" }
uniffi = { version = "=0.29.0", features = ["build"] }
